# smart_ptr

./: .drone.jsonnet  .drone.star  .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  build.jam  intrusive_ptr.html  make_shared_array.html  make_unique.html  pointer_cast.html  shared_array.htm  shared_ptr.htm  smart_ptr.htm
.drone/: drone.bat  drone.sh
doc/: smart_ptr.adoc  smart_ptr.html
meta/: libraries.json
test/: CMakeLists.txt  Jamfile  Jamfile.v2  abi_test_lib.cpp  abi_test_main.cpp  allocate_local_shared_array_construct_test.cpp  allocate_local_shared_array_esft_test.cpp  allocate_local_shared_array_noinit_test.cpp  allocate_local_shared_array_test.cpp  allocate_local_shared_array_throws_test.cpp  allocate_local_shared_array_value_test.cpp  allocate_local_shared_arrays_test.cpp  allocate_local_shared_esft_test.cpp  allocate_local_shared_test.cpp  allocate_shared_alloc11_test.cpp  allocate_shared_array_construct_test.cpp  allocate_shared_array_noinit_test.cpp  allocate_shared_array_test.cpp  allocate_shared_array_throws_test.cpp  allocate_shared_arrays_test.cpp  allocate_shared_construct11_test.cpp  allocate_shared_test.cpp  allocate_unique_aggregate_test.cpp  allocate_unique_args_test.cpp  allocate_unique_array_construct_test.cpp  allocate_unique_array_noinit_test.cpp  allocate_unique_array_test.cpp  allocate_unique_array_throws_test.cpp  allocate_unique_array_value_test.cpp  allocate_unique_arrays_test.cpp  allocate_unique_construct_test.cpp  allocate_unique_noinit_test.cpp  allocate_unique_test.cpp  allocate_unique_throws_test.cpp  atomic_sp_test.cpp  (+110 more)
(+119 files in other folders)
